--- a/pom.xml
+++ b/pom.xml
@@ -46,10 +46,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-			
-		
-        
 		</plugins>
+		<finalName>springboot-images-new</finalName>
 	</build>
 	 <repositories>
 		<repository>
